--- a/medical/pom.xml
+++ b/medical/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>devops</groupId>
   <artifactId>medical</artifactId>
-  <packaging>war</packaging>
+  <packaging>jar</packaging>
   <version>0.0.1-SNAPSHOT</version>
   <name>medical Maven Webapp</name>
   <url>http://maven.apache.org</url>
@@ -136,7 +136,17 @@
 	<artifactId>servlet-api</artifactId>
 	<version>2.5</version>
 </dependency>
-  </dependencies>
+<dependency>
+        <groupId>org.seleniumhq.selenium</groupId>
+        <artifactId>selenium-java</artifactId>
+        <version>4.0.0-alpha-5</version>
+</dependency>
+<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>6.8.8</version>
+</dependency> 
+</dependencies>
   
 
   <build>
